style:carousel slide 1 content, image and markup

--- a/index.html
+++ b/index.html
@@ -71,10 +71,13 @@
   </header>
   <main class="container-fluid">
 
+
+
+
     <!-- top category info -->
     <div class="row">
       <div class="container-fluid p-0">
-        <div class="jumbotron mt-5 mb-0" style="text-align: center;">
+        <div class="jumbotron" style="text-align: center;">
           <h1 class="text-light">ZATTIX</h1>
           <p>Buying and Selling could not be simpler than this</p>
           <div class="row row-cols-1 row-cols-md-4 justify-content-center">
@@ -90,12 +93,17 @@
           </div>
         </div>
       </div>
-      <!-- carousel -->
+
     </div>
-    <!-- carousel -->
+
+
+
+    <!-- carousel main - three main slides after header-->
     <section class="row">
-      <div data-ride="carousel pt-5" class="carousel-main carousel slide px-md-5 carousel-" id="carousel-1">
+      <div data-ride="carousel" class="carousel-main carousel slide px-md-5" id="carousel-1">
         <div class="carousel-inner">
+          <!-- slides for carousal start -->
+
           <!-- slide 1 -->
           <div class="carousel-item active">
             <div class="d-md-flex mx-auto">
@@ -109,61 +117,16 @@
 
               </div>
               <div>
-                <h2>HTC one m8</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio temporibus, in ipsam quis delectus
-                  ipsum repellendus. Dolores quaerat iste commodi deleniti eius consectetur a dolorem fuga natus quos,
-                  eligendi perspiciatis?</p>
-                <p>By <span>John Doe</span></p>
-                <button class="bg-red">$450</button>
-                <button class="bg-red">Purchase Details</button>
+                <h2>PIANO.</h2>
+                <p>“Life is like a piano. What you get out of it depends on how you play it.” -Tom Lehrer</p>
+                <p>By <span>Tom Lehrer</span></p>
+                <p>Check out our awesome piano collection</p>
+                <button class="bg-red">Explore</button>
               </div>
             </div>
           </div>
-          <!-- slide 2 -->
-          <div class="carousel-item slide">
-            <div class="d-md-flex mx-auto m-md-5 px-md-5 pt-3">
-              <div>
-                <img src="./assets/louis-hansel-shotsoflouis-M_dJ_ScwaLE-unsplash.jpg" alt="picture of piano category"
-                  class="carousel-img">
-                <span class="sr-only">Photo by <a
-                    href="https://unsplash.com/@louishansel?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Louis
-                    Hansel @shotsoflouis</a> on <a
-                    href="https://unsplash.com/s/photos/guitar?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
-              </div>
-              <div>
-                <h2>HTC one m8</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio temporibus, in ipsam quis delectus
-                  ipsum repellendus. Dolores quaerat iste commodi deleniti eius consectetur a dolorem fuga natus quos,
-                  eligendi perspiciatis?</p>
-                <p>By <span>John Doe</span></p>
-                <button class="bg-red">$450</button>
-                <button class="bg-red">Purchase Details</button>
-              </div>
-            </div>
-          </div>
-          <!-- slide 3 
-          -->
-          <div class="carousel-item">
-            <div class="d-md-flex mx-auto m-md-5 px-md-5 pt-3">
-              <div>
-                <img src="./assets/chris-bulilan-4ktLEcM4PuA-unsplash.jpg" alt="picture of piano category"
-                  class="carousel-img">
-                <span class="sr-only">Photo by <a
-                    href="https://unsplash.com/@chrisbulilan?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Chris
-                    Bulilan</a> on <a
-                    href="https://unsplash.com/s/photos/drums?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
-              </div>
-              <div>
-                <h2>HTC one m8</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio temporibus, in ipsam quis delectus
-                  ipsum repellendus. Dolores quaerat iste commodi deleniti eius consectetur a dolorem fuga natus quos,
-                  eligendi perspiciatis?</p>
-                <p>By <span>John Doe</span></p>
-                <button class="bg-red">$450</button>
-                <button class="bg-red">Purchase Details</button>
-              </div>
-            </div>
-          </div>
+
+
         </div>
         <div><a href="#carousel-1" role="button" data-slide="prev" class="carousel-control-prev"><span
               aria-hidden="true" class="carousel-control-prev-icon"></span><span class="sr-only">Previous</span></a><a
