--- a/index.html
+++ b/index.html
@@ -77,12 +77,13 @@
     <!-- top category info -->
     <div class="row">
       <div class="container-fluid p-0">
-        <div class="jumbotron" style="text-align: center;">
+        <div class="jumbotron">
           <h1 class="text-light">ZATTIX</h1>
           <p>Buying and Selling could not be simpler than this</p>
           <div class="row row-cols-1 row-cols-md-4 justify-content-center">
-            <div class="dropdown d-inline jumbotron-element"><button class="btn dropdown-toggle bg-light w-100"
-                aria-expanded="false" data-toggle="dropdown bg-light" type="button">All Dssepartments </button>
+            <div class="dropdown d-inline jumbotron-element"><button
+                class="button text-dark dropdown-toggle bg-light w-100" aria-expanded="false"
+                data-toggle="dropdown bg-light" type="button">All Departments </button>
               <!-- drop down -->
               <div class="dropdown-menu"><a class="dropdown-item" href="#">Piano</a><a class="dropdown-item"
                   href="#">Guitar</a><a class="dropdown-item" href="#">Drums</a>
@@ -105,11 +106,11 @@
           <!-- slides for carousal start -->
 
           <!-- slide 1 -->
-          <div class="carousel-item active">
+          <div class="carousel-item active text-center">
             <div class="d-md-flex mx-auto">
               <div>
                 <img src="./assets/piano/miguel-dominguez-5yDL5rOKrUM-unsplash.jpg" alt="picture of piano category"
-                  class="carousel-img">
+                  class="carousel-img" class="carousel-img">
                 <span class="sr-only">Photo by <a
                     href="https://unsplash.com/@migueldominguez?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Miguel
                     Dominguez</a> on <a
@@ -121,7 +122,7 @@
                 <p>“Life is like a piano. What you get out of it depends on how you play it.” -Tom Lehrer</p>
                 <p>By <span>Tom Lehrer</span></p>
                 <p>Check out our awesome piano collection</p>
-                <button class="bg-red">Explore</button>
+                <button class="button">Explore</button>
               </div>
             </div>
           </div>
@@ -148,7 +149,7 @@
       </div>
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 align-content-center p-5">
         <div class="product-card">
-          <img src="./assets/piano-1.jpg" alt="piano">
+          <img src="./assets/piano/piano-1.jpg" alt="piano">
           <h4>Piano</h4>
           <p>New</p>
           <p>Fromz San Francisco, US</p>
@@ -158,7 +159,7 @@
           </div>
         </div>
         <div class="product-card">
-          <img src="./assets/piano-1.jpg" alt="piano">
+          <img src="./assets/piano/piano-1.jpg" alt="piano">
           <h4>Piano</h4>
           <p>New</p>
           <p>Fromz San Francisco, US</p>
@@ -168,7 +169,7 @@
           </div>
         </div>
         <div class="product-card">
-          <img src="./assets/piano-1.jpg" alt="piano">
+          <img src="./assets/piano/piano-1.jpg" alt="piano">
           <h4>Piano</h4>
           <p>New</p>
           <p>Fromz San Francisco, US</p>
@@ -178,7 +179,7 @@
           </div>
         </div>
         <div class="product-card">
-          <img src="./assets/piano-1.jpg" alt="piano">
+          <img src="./assets/piano/piano-1.jpg" alt="piano">
           <h4>Piano</h4>
           <p>New</p>
           <p>Fromz San Francisco, US</p>
@@ -188,7 +189,7 @@
           </div>
         </div>
         <div class="product-card d-none d-lg-block">
-          <img src="./assets/piano-1.jpg" alt="piano">
+          <img src="./assets/piano/piano-1.jpg" alt="piano">
           <h4>Piano</h4>
           <p>New</p>
           <p>Fromz San Francisco, US</p>
@@ -198,7 +199,7 @@
           </div>
         </div>
         <div class="product-card d-none d-lg-block">
-          <img src="./assets/piano-1.jpg" alt="piano">
+          <img src="./assets/piano/piano-1.jpg" alt="piano">
           <h4>Piano</h4>
           <p>New</p>
           <p>Fromz San Francisco, US</p>
@@ -208,7 +209,7 @@
           </div>
         </div>
         <div class="product-card d-none d-xl-block">
-          <img src="./assets/piano-1.jpg" alt="piano">
+          <img src="./assets/piano/piano-1.jpg" alt="piano">
           <h4>Piano</h4>
           <p>New</p>
           <p>Fromz San Francisco, US</p>
@@ -218,7 +219,7 @@
           </div>
         </div>
         <div class="product-card d-none d-xl-block">
-          <img src="./assets/piano-1.jpg" alt="piano">
+          <img src="./assets/piano/piano-1.jpg" alt="piano">
           <h4>Piano</h4>
           <p>New</p>
           <p>Fromz San Francisco, US</p>
@@ -240,7 +241,7 @@
       </div>
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 align-content-center p-5">
         <div class="product-card">
-          <img src="./assets/piano-1.jpg" alt="piano">
+          <img src="./assets/piano/piano-1.jpg" alt="piano">
           <h4>Piano</h4>
           <p>New</p>
           <p>Fromz San Francisco, US</p>
@@ -250,7 +251,7 @@
           </div>
         </div>
         <div class="product-card">
-          <img src="./assets/piano-1.jpg" alt="piano">
+          <img src="./assets/piano/piano-1.jpg" alt="piano">
           <h4>Piano</h4>
           <p>New</p>
           <p>Fromz San Francisco, US</p>
@@ -260,7 +261,7 @@
           </div>
         </div>
         <div class="product-card">
-          <img src="./assets/piano-1.jpg" alt="piano">
+          <img src="./assets/piano/piano-1.jpg" alt="piano">
           <h4>Piano</h4>
           <p>New</p>
           <p>Fromz San Francisco, US</p>
@@ -270,7 +271,7 @@
           </div>
         </div>
         <div class="product-card">
-          <img src="./assets/piano-1.jpg" alt="piano">
+          <img src="./assets/piano/piano-1.jpg" alt="piano">
           <h4>Piano</h4>
           <p>New</p>
           <p>Fromz San Francisco, US</p>
@@ -280,7 +281,7 @@
           </div>
         </div>
         <div class="product-card d-none d-lg-block">
-          <img src="./assets/piano-1.jpg" alt="piano">
+          <img src="./assets/piano/piano-1.jpg" alt="piano">
           <h4>Piano</h4>
           <p>New</p>
           <p>Fromz San Francisco, US</p>
@@ -290,7 +291,7 @@
           </div>
         </div>
         <div class="product-card d-none d-lg-block">
-          <img src="./assets/piano-1.jpg" alt="piano">
+          <img src="./assets/piano/piano-1.jpg" alt="piano">
           <h4>Piano</h4>
           <p>New</p>
           <p>Fromz San Francisco, US</p>
@@ -300,7 +301,7 @@
           </div>
         </div>
         <div class="product-card d-none d-xl-block">
-          <img src="./assets/piano-1.jpg" alt="piano">
+          <img src="./assets/piano/piano-1.jpg" alt="piano">
           <h4>Piano</h4>
           <p>New</p>
           <p>Fromz San Francisco, US</p>
@@ -310,7 +311,7 @@
           </div>
         </div>
         <div class="product-card d-none d-xl-block">
-          <img src="./assets/piano-1.jpg" alt="piano">
+          <img src="./assets/piano/piano-1.jpg" alt="piano">
           <h4>Piano</h4>
           <p>New</p>
           <p>Fromz San Francisco, US</p>
@@ -332,7 +333,7 @@
       </div>
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 align-content-center p-5">
         <div class="product-card">
-          <img src="./assets/piano-1.jpg" alt="piano">
+          <img src="./assets/piano/piano-1.jpg" alt="piano">
           <h4>Piano</h4>
           <p>New</p>
           <p>Fromz San Francisco, US</p>
@@ -342,7 +343,7 @@
           </div>
         </div>
         <div class="product-card">
-          <img src="./assets/piano-1.jpg" alt="piano">
+          <img src="./assets/piano/piano-1.jpg" alt="piano">
           <h4>Piano</h4>
           <p>New</p>
           <p>Fromz San Francisco, US</p>
@@ -352,7 +353,7 @@
           </div>
         </div>
         <div class="product-card">
-          <img src="./assets/piano-1.jpg" alt="piano">
+          <img src="./assets/piano/piano-1.jpg" alt="piano">
           <h4>Piano</h4>
           <p>New</p>
           <p>Fromz San Francisco, US</p>
@@ -362,7 +363,7 @@
           </div>
         </div>
         <div class="product-card">
-          <img src="./assets/piano-1.jpg" alt="piano">
+          <img src="./assets/piano/piano-1.jpg" alt="piano">
           <h4>Piano</h4>
           <p>New</p>
           <p>Fromz San Francisco, US</p>
@@ -372,7 +373,7 @@
           </div>
         </div>
         <div class="product-card d-none d-lg-block">
-          <img src="./assets/piano-1.jpg" alt="piano">
+          <img src="./assets/piano/piano-1.jpg" alt="piano">
           <h4>Piano</h4>
           <p>New</p>
           <p>Fromz San Francisco, US</p>
@@ -382,7 +383,7 @@
           </div>
         </div>
         <div class="product-card d-none d-lg-block">
-          <img src="./assets/piano-1.jpg" alt="piano">
+          <img src="./assets/piano/piano-1.jpg" alt="piano">
           <h4>Piano</h4>
           <p>New</p>
           <p>Fromz San Francisco, US</p>
@@ -392,7 +393,7 @@
           </div>
         </div>
         <div class="product-card d-none d-xl-block">
-          <img src="./assets/piano-1.jpg" alt="piano">
+          <img src="./assets/piano/piano-1.jpg" alt="piano">
           <h4>Piano</h4>
           <p>New</p>
           <p>Fromz San Francisco, US</p>
@@ -402,7 +403,7 @@
           </div>
         </div>
         <div class="product-card d-none d-xl-block">
-          <img src="./assets/piano-1.jpg" alt="piano">
+          <img src="./assets/piano/piano-1.jpg" alt="piano">
           <h4>Piano</h4>
           <p>New</p>
           <p>Fromz San Francisco, US</p>
