style:carousel sides piano violin and drum

--- a/index.html
+++ b/index.html
@@ -118,7 +118,44 @@
 
               </div>
               <div>
-                <h2>PIANO.</h2>
+                <h2 class="red">PIANO.</h2>
+                <p>“Life is like a piano. What you get out of it depends on how you play it.” -Tom Lehrer</p>
+                <p>By <span>Tom Lehrer</span></p>
+                <p>Check out our awesome piano collection</p>
+                <button class="button">Explore</button>
+              </div>
+            </div>
+          </div>
+
+          <!-- slide 2 -->
+          <div class="carousel-item text-center">
+            <div class="d-md-flex mx-auto">
+              <div>
+                <img src="./assets/violins/louis-hansel-shotsoflouis-M_dJ_ScwaLE-unsplash.jpg"
+                  alt="picture of piano category" class="carousel-img" class="carousel-img">
+                <span class="sr-only">Photo by louis hansel</span>
+
+              </div>
+              <div>
+                <h2 class="red">VIOLIN.</h2>
+                <p>“Life is like a piano. What you get out of it depends on how you play it.” -Tom Lehrer</p>
+                <p>By <span>Tom Lehrer</span></p>
+                <p>Check out our awesome piano collection</p>
+                <button class="button">Explore</button>
+              </div>
+            </div>
+          </div>
+
+          <!-- slide 3 -->
+          <div class="carousel-item text-center">
+            <div class="d-md-flex mx-auto">
+              <div>
+                <img src="./assets/drums/chris-bulilan-4ktLEcM4PuA-unsplash.jpg" alt="picture of piano category"
+                  class="carousel-img" class="carousel-img">
+                <span class="sr-only">Photo by chris bulilan</span>
+              </div>
+              <div>
+                <h2 class="red">DRUM.</h2>
                 <p>“Life is like a piano. What you get out of it depends on how you play it.” -Tom Lehrer</p>
                 <p>By <span>Tom Lehrer</span></p>
                 <p>Check out our awesome piano collection</p>
