style:jumbotron margin-top to offset fixed nav

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 </head>
 
 <body>
-  <header class="container-fluid px-0">
+  <header class="container-fluid">
     <!-- navbar top -->
     <nav
-      class="navbar navbar-light navbar-expand-md d-md-flex align-items-md-center bg-charcoal position-fixed w-100 p-1 p-lg-2">
+      class="navbar navbar-light navbar-expand-md d-md-flex align-items-md-center bg-charcoal fixed-top w-100 p-1 p-lg-2">
       <a class="navbar-brand" href="#"><i class="fa fa-shopping-basket red mr-2"></i><span
           class="text-light mr-1 mr-lg-5">ZATTIX</span></a>
       <!-- toggle button -->
@@ -69,15 +69,11 @@
     <div>
     </div>
   </header>
-  <main class="container-fluid">
-
-
-
-
+  <main class="container-fluid m-0 p-0">
     <!-- top category info -->
     <div class="row">
-      <div class="container-fluid p-0">
-        <div class="jumbotron">
+      <div class="container-fluid">
+        <div class="jumbotron mt-5">
           <h1 class="text-light">ZATTIX</h1>
           <p>Buying and Selling could not be simpler than this</p>
           <div class="row row-cols-1 row-cols-md-4 justify-content-center">
@@ -138,9 +134,10 @@
               </div>
               <div>
                 <h2 class="red">VIOLIN.</h2>
-                <p>“Life is like a piano. What you get out of it depends on how you play it.” -Tom Lehrer</p>
-                <p>By <span>Tom Lehrer</span></p>
-                <p>Check out our awesome piano collection</p>
+                <p>"When you play a violin piece, you are a storyteller, and you're telling a story"
+                </p>
+                <p>By <span>Joshua Bell</span></p>
+                <p>Check out our awesome violin collection</p>
                 <button class="button">Explore</button>
               </div>
             </div>
@@ -155,10 +152,11 @@
                 <span class="sr-only">Photo by chris bulilan</span>
               </div>
               <div>
-                <h2 class="red">DRUM.</h2>
-                <p>“Life is like a piano. What you get out of it depends on how you play it.” -Tom Lehrer</p>
-                <p>By <span>Tom Lehrer</span></p>
-                <p>Check out our awesome piano collection</p>
+                <h2 class="red">DRUMS.</h2>
+                <p>“I'm not a singer who plays a bit of drums. I'm a drummer that sings a bit.”
+                </p>
+                <p>By <span>Phil Collins</span></p>
+                <p>Check out our awesome drums collection</p>
                 <button class="button">Explore</button>
               </div>
             </div>
