fix:carousel parent row creating width issues fixed

--- a/index.html
+++ b/index.html
@@ -73,18 +73,11 @@
     <!-- top category info -->
     <div class="row">
       <div class="container-fluid">
-        <div class="jumbotron mt-5">
+        <div class="jumbotron mt-5 text-center">
           <h1 class="text-light">ZATTIX</h1>
           <p>Buying and Selling could not be simpler than this</p>
           <div class="row row-cols-1 row-cols-md-4 justify-content-center">
-            <div class="dropdown d-inline jumbotron-element"><button
-                class="button text-dark dropdown-toggle bg-light w-100" aria-expanded="false"
-                data-toggle="dropdown bg-light" type="button">All Departments </button>
-              <!-- drop down -->
-              <div class="dropdown-menu"><a class="dropdown-item" href="#">Piano</a><a class="dropdown-item"
-                  href="#">Guitar</a><a class="dropdown-item" href="#">Drums</a>
-              </div>
-            </div>
+            <!-- departments code needed here -->
             <input type="search" placeholder="What are you searching for ?" class="border-light jumbotron-element" />
             <a href="search.html" class="btn btn-dark bg-charcoal text-light jumbotron-element">Search</a>
           </div>
@@ -96,7 +89,7 @@
 
 
     <!-- carousel main - three main slides after header-->
-    <section class="row">
+    <section class="container-fluid">
       <div data-ride="carousel" class="carousel-main carousel slide px-md-5" id="carousel-1">
         <div class="carousel-inner">
           <!-- slides for carousal start -->
@@ -127,8 +120,8 @@
           <div class="carousel-item text-center">
             <div class="d-md-flex mx-auto">
               <div>
-                <img src="./assets/violins/louis-hansel-shotsoflouis-M_dJ_ScwaLE-unsplash.jpg"
-                  alt="picture of piano category" class="carousel-img" class="carousel-img">
+                <img src="./assets/piano/miguel-dominguez-5yDL5rOKrUM-unsplash.jpg" alt="picture of piano category"
+                  class="carousel-img" class="carousel-img">
                 <span class="sr-only">Photo by louis hansel</span>
 
               </div>
