jumbotron parent row messing up padding fixed

--- a/index.html
+++ b/index.html
@@ -69,24 +69,17 @@
     <div>
     </div>
   </header>
-  <main class="container-fluid m-0 p-0">
+  <main class="container-fluid p-0">
     <!-- top category info -->
-    <div class="row">
-      <div class="container-fluid">
-        <div class="jumbotron mt-5 text-center">
-          <h1 class="text-light">ZATTIX</h1>
-          <p>Buying and Selling could not be simpler than this</p>
-          <div class="row row-cols-1 row-cols-md-4 justify-content-center">
-            <!-- departments code needed here -->
-            <input type="search" placeholder="What are you searching for ?" class="border-light jumbotron-element" />
-            <a href="search.html" class="btn btn-dark bg-charcoal text-light jumbotron-element">Search</a>
-          </div>
-        </div>
+    <div class="jumbotron mt-5 text-center">
+      <h1 class="text-light">ZATTIX</h1>
+      <p>Buying and Selling could not be simpler than this</p>
+      <div class="row row-cols-1 row-cols-md-2 justify-content-center">
+        <!-- departments code needed here -->
+        <input type="search" placeholder="What are you searching for ?" class="border-light jumbotron-element" />
+        <a href="search.html" class="btn btn-dark bg-charcoal text-light jumbotron-element">Search</a>
       </div>
-
     </div>
-
-
 
     <!-- carousel main - three main slides after header-->
     <section class="container-fluid">
