carousel styling justify center

--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
 
     <!-- carousel main - three main slides after header-->
     <section class="container-fluid">
-      <div data-ride="carousel" class="carousel-main carousel slide px-md-5" id="carousel-1">
+      <div data-ride="carousel" class="carousel-main carousel slide" id="carousel-1">
         <div class="carousel-inner">
           <!-- slides for carousal start -->
 
           <!-- slide 1 -->
           <div class="carousel-item active text-center">
-            <div class="d-md-flex mx-auto">
+            <div class="row row-cols-1 row-cols-md-2">
               <div>
                 <img src="./assets/piano/miguel-dominguez-5yDL5rOKrUM-unsplash.jpg" alt="picture of piano category"
                   class="carousel-img" class="carousel-img">
@@ -99,7 +99,7 @@
                     href="https://unsplash.com/s/photos/piano?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
 
               </div>
-              <div>
+              <div class="carousel-texts d-flex">
                 <h2 class="red">PIANO.</h2>
                 <p>“Life is like a piano. What you get out of it depends on how you play it.” -Tom Lehrer</p>
                 <p>By <span>Tom Lehrer</span></p>
@@ -111,14 +111,14 @@
 
           <!-- slide 2 -->
           <div class="carousel-item text-center">
-            <div class="d-md-flex mx-auto">
+            <div class="row row-cols-1 row-cols-md-2">
               <div>
                 <img src="./assets/piano/miguel-dominguez-5yDL5rOKrUM-unsplash.jpg" alt="picture of piano category"
                   class="carousel-img" class="carousel-img">
                 <span class="sr-only">Photo by louis hansel</span>
 
               </div>
-              <div>
+              <div class="carousel-texts d-flex">
                 <h2 class="red">VIOLIN.</h2>
                 <p>"When you play a violin piece, you are a storyteller, and you're telling a story"
                 </p>
@@ -131,13 +131,13 @@
 
           <!-- slide 3 -->
           <div class="carousel-item text-center">
-            <div class="d-md-flex mx-auto">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 justify-content-center">
               <div>
                 <img src="./assets/drums/chris-bulilan-4ktLEcM4PuA-unsplash.jpg" alt="picture of piano category"
                   class="carousel-img" class="carousel-img">
                 <span class="sr-only">Photo by chris bulilan</span>
               </div>
-              <div>
+              <div class="carousel-texts d-flex">
                 <h2 class="red">DRUMS.</h2>
                 <p>“I'm not a singer who plays a bit of drums. I'm a drummer that sings a bit.”
                 </p>
