main:background-color:red

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
     <div>
     </div>
   </header>
-  <main class="container-fluid p-0">
+  <main class="container-fluid p-0 bg-red">
     <!-- top category info -->
-    <div class="jumbotron mt-5 text-center">
+    <div class="jumbotron mt-5 mb-0 text-center">
       <h1 class="text-light">ZATTIX</h1>
       <p>Buying and Selling could not be simpler than this</p>
       <div class="row row-cols-1 row-cols-md-2 justify-content-center">
@@ -82,14 +82,14 @@
     </div>
 
     <!-- carousel main - three main slides after header-->
-    <section class="container-fluid">
+    <section class="container-fluid my-1 p-0">
       <div data-ride="carousel" class="carousel-main carousel slide" id="carousel-1">
         <div class="carousel-inner">
           <!-- slides for carousal start -->
 
           <!-- slide 1 -->
           <div class="carousel-item active text-center">
-            <div class="row row-cols-1 row-cols-md-2">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center">
               <div>
                 <img src="./assets/piano/miguel-dominguez-5yDL5rOKrUM-unsplash.jpg" alt="picture of piano category"
                   class="carousel-img" class="carousel-img">
@@ -111,7 +111,7 @@
 
           <!-- slide 2 -->
           <div class="carousel-item text-center">
-            <div class="row row-cols-1 row-cols-md-2">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center">
               <div>
                 <img src="./assets/piano/miguel-dominguez-5yDL5rOKrUM-unsplash.jpg" alt="picture of piano category"
                   class="carousel-img" class="carousel-img">
@@ -131,7 +131,7 @@
 
           <!-- slide 3 -->
           <div class="carousel-item text-center">
-            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 justify-content-center">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center">
               <div>
                 <img src="./assets/drums/chris-bulilan-4ktLEcM4PuA-unsplash.jpg" alt="picture of piano category"
                   class="carousel-img" class="carousel-img">
