style:carousel padding fix

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </div>
 
     <!-- carousel main - three main slides after header-->
-    <section class="container-fluid my-1 p-0">
+    <section class="container-fluid my-2 p-0">
       <div data-ride="carousel" class="carousel-main carousel slide" id="carousel-1">
         <div class="carousel-inner">
           <!-- slides for carousal start -->
@@ -162,13 +162,13 @@
       </div>
     </section>
     <!-- main products section -->
-    <section class="container-fluid">
+    <section class="container-fluid bg-light">
       <div class="d-flex">
         <img src="./" alt="">
         <h3>Piano</h3>
         <p>Grand, Upright, Electronic</p>
       </div>
-      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 align-content-center p-5">
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 align-content-center">
         <div class="product-card">
           <img src="./assets/piano/piano-1.jpg" alt="piano">
           <h4>Piano</h4>
@@ -250,190 +250,6 @@
           </div>
         </div>
       </div> -->
-
-
-    </section>
-    <!-- main products section -->
-    <section class="container-fluid">
-      <div class="d-flex">
-        <img src="./" alt="">
-        <h3>Piano</h3>
-        <p>Grand, Upright, Electronic</p>
-      </div>
-      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 align-content-center p-5">
-        <div class="product-card">
-          <img src="./assets/piano/piano-1.jpg" alt="piano">
-          <h4>Piano</h4>
-          <p>New</p>
-          <p>Fromz San Francisco, US</p>
-          <div class="d-flex justify-content-between">
-            <button>+</button>
-            <button>1380$</button>
-          </div>
-        </div>
-        <div class="product-card">
-          <img src="./assets/piano/piano-1.jpg" alt="piano">
-          <h4>Piano</h4>
-          <p>New</p>
-          <p>Fromz San Francisco, US</p>
-          <div class="d-flex justify-content-between">
-            <button>+</button>
-            <button>1380$</button>
-          </div>
-        </div>
-        <div class="product-card">
-          <img src="./assets/piano/piano-1.jpg" alt="piano">
-          <h4>Piano</h4>
-          <p>New</p>
-          <p>Fromz San Francisco, US</p>
-          <div class="d-flex justify-content-between">
-            <button>+</button>
-            <button>1380$</button>
-          </div>
-        </div>
-        <div class="product-card">
-          <img src="./assets/piano/piano-1.jpg" alt="piano">
-          <h4>Piano</h4>
-          <p>New</p>
-          <p>Fromz San Francisco, US</p>
-          <div class="d-flex justify-content-between">
-            <button>+</button>
-            <button>1380$</button>
-          </div>
-        </div>
-        <div class="product-card d-none d-lg-block">
-          <img src="./assets/piano/piano-1.jpg" alt="piano">
-          <h4>Piano</h4>
-          <p>New</p>
-          <p>Fromz San Francisco, US</p>
-          <div class="d-flex justify-content-between">
-            <button>+</button>
-            <button>1380$</button>
-          </div>
-        </div>
-        <div class="product-card d-none d-lg-block">
-          <img src="./assets/piano/piano-1.jpg" alt="piano">
-          <h4>Piano</h4>
-          <p>New</p>
-          <p>Fromz San Francisco, US</p>
-          <div class="d-flex justify-content-between">
-            <button>+</button>
-            <button>1380$</button>
-          </div>
-        </div>
-        <div class="product-card d-none d-xl-block">
-          <img src="./assets/piano/piano-1.jpg" alt="piano">
-          <h4>Piano</h4>
-          <p>New</p>
-          <p>Fromz San Francisco, US</p>
-          <div class="d-flex justify-content-between">
-            <button>+</button>
-            <button>1380$</button>
-          </div>
-        </div>
-        <div class="product-card d-none d-xl-block">
-          <img src="./assets/piano/piano-1.jpg" alt="piano">
-          <h4>Piano</h4>
-          <p>New</p>
-          <p>Fromz San Francisco, US</p>
-          <div class="d-flex justify-content-between">
-            <button>+</button>
-            <button>1380$</button>
-          </div>
-        </div>
-      </div> -->
-
-
-    </section>
-    <!-- main products section -->
-    <section class="container-fluid">
-      <div class="d-flex">
-        <img src="./" alt="">
-        <h3>Piano</h3>
-        <p>Grand, Upright, Electronic</p>
-      </div>
-      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 align-content-center p-5">
-        <div class="product-card">
-          <img src="./assets/piano/piano-1.jpg" alt="piano">
-          <h4>Piano</h4>
-          <p>New</p>
-          <p>Fromz San Francisco, US</p>
-          <div class="d-flex justify-content-between">
-            <button>+</button>
-            <button>1380$</button>
-          </div>
-        </div>
-        <div class="product-card">
-          <img src="./assets/piano/piano-1.jpg" alt="piano">
-          <h4>Piano</h4>
-          <p>New</p>
-          <p>Fromz San Francisco, US</p>
-          <div class="d-flex justify-content-between">
-            <button>+</button>
-            <button>1380$</button>
-          </div>
-        </div>
-        <div class="product-card">
-          <img src="./assets/piano/piano-1.jpg" alt="piano">
-          <h4>Piano</h4>
-          <p>New</p>
-          <p>Fromz San Francisco, US</p>
-          <div class="d-flex justify-content-between">
-            <button>+</button>
-            <button>1380$</button>
-          </div>
-        </div>
-        <div class="product-card">
-          <img src="./assets/piano/piano-1.jpg" alt="piano">
-          <h4>Piano</h4>
-          <p>New</p>
-          <p>Fromz San Francisco, US</p>
-          <div class="d-flex justify-content-between">
-            <button>+</button>
-            <button>1380$</button>
-          </div>
-        </div>
-        <div class="product-card d-none d-lg-block">
-          <img src="./assets/piano/piano-1.jpg" alt="piano">
-          <h4>Piano</h4>
-          <p>New</p>
-          <p>Fromz San Francisco, US</p>
-          <div class="d-flex justify-content-between">
-            <button>+</button>
-            <button>1380$</button>
-          </div>
-        </div>
-        <div class="product-card d-none d-lg-block">
-          <img src="./assets/piano/piano-1.jpg" alt="piano">
-          <h4>Piano</h4>
-          <p>New</p>
-          <p>Fromz San Francisco, US</p>
-          <div class="d-flex justify-content-between">
-            <button>+</button>
-            <button>1380$</button>
-          </div>
-        </div>
-        <div class="product-card d-none d-xl-block">
-          <img src="./assets/piano/piano-1.jpg" alt="piano">
-          <h4>Piano</h4>
-          <p>New</p>
-          <p>Fromz San Francisco, US</p>
-          <div class="d-flex justify-content-between">
-            <button>+</button>
-            <button>1380$</button>
-          </div>
-        </div>
-        <div class="product-card d-none d-xl-block">
-          <img src="./assets/piano/piano-1.jpg" alt="piano">
-          <h4>Piano</h4>
-          <p>New</p>
-          <p>Fromz San Francisco, US</p>
-          <div class="d-flex justify-content-between">
-            <button>+</button>
-            <button>1380$</button>
-          </div>
-        </div>
-      </div>
 
 
     </section>
