--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <!-- top category info -->
     <div class="jumbotron mt-5 mb-0 text-center">
       <h1 class="text-light">ZATTIX</h1>
-      <p>Buying and Selling could not be simpler than this</p>
+      <p class="text-light">Buying and Selling could not be simpler than this</p>
       <div class="row row-cols-1 row-cols-md-2 justify-content-center">
         <!-- departments code needed here -->
         <input type="search" placeholder="What are you searching for ?" class="border-light jumbotron-element" />
@@ -82,7 +82,7 @@
     </div>
 
     <!-- carousel main - three main slides after header-->
-    <section class="container-fluid my-2 p-0">
+    <section class="container-fluid my-2 m-0 p-0">
       <div data-ride="carousel" class="carousel-main carousel slide" id="carousel-1">
         <div class="carousel-inner">
           <!-- slides for carousal start -->
@@ -162,7 +162,7 @@
       </div>
     </section>
     <!-- main products section -->
-    <section class="container-fluid bg-light">
+    <section class="container-fluid bg-light product-section">
       <div class="d-flex">
         <img src="./" alt="">
         <h3>Piano</h3>
