text center for search input

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
       <p class="text-light">Buying and Selling could not be simpler than this</p>
       <div class="row row-cols-1 row-cols-md-2 justify-content-center">
         <!-- departments code needed here -->
-        <input type="search" placeholder="What are you searching for ?" class="border-light jumbotron-element" />
+        <input type="search" placeholder="What are you searching for ?"
+          class="border-light jumbotron-element text-center" />
         <a href="search.html" class="btn btn-dark bg-charcoal text-light jumbotron-element">Search</a>
       </div>
     </div>
