colors:caresoul and body background-colors

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 </head>
 
-<body>
+<body class="bg-dark-blue">
   <header class="container-fluid">
     <!-- navbar top -->
     <nav
@@ -69,7 +69,7 @@
     <div>
     </div>
   </header>
-  <main class="container-fluid p-0 bg-red">
+  <main class="container-fluid p-0">
     <!-- top category info -->
     <div class="jumbotron mt-5 mb-0 text-center">
       <h1 class="text-light">ZATTIX</h1>
