carousel:styling for media queries colors of texts and margin top

--- a/index.html
+++ b/index.html
@@ -100,11 +100,13 @@
                     href="https://unsplash.com/s/photos/piano?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
 
               </div>
-              <div class="carousel-texts d-flex">
+              <div class="carousel-texts d-flex p-4">
                 <h2 class="red">PIANO.</h2>
-                <p>“Life is like a piano. What you get out of it depends on how you play it.” -Tom Lehrer</p>
-                <p>By <span>Tom Lehrer</span></p>
-                <p>Check out our awesome piano collection</p>
+                <p class="quote">“Life is like a piano. What you get out of it depends on how you play it.”
+                  <span>-- Tom Lehrer</span>
+                </p>
+
+                <p class="check">Check out our awesome piano collection</p>
                 <button class="button">Explore</button>
               </div>
             </div>
@@ -119,12 +121,13 @@
                 <span class="sr-only">Photo by louis hansel</span>
 
               </div>
-              <div class="carousel-texts d-flex">
+              <div class="carousel-texts d-flex p-4">
                 <h2 class="red">VIOLIN.</h2>
-                <p>"When you play a violin piece, you are a storyteller, and you're telling a story"
+                <p class="quote">"When you play a violin piece, you are a storyteller, and you're telling a story"
+                  <span>-- Joshua Bell</span>
                 </p>
-                <p>By <span>Joshua Bell</span></p>
-                <p>Check out our awesome violin collection</p>
+
+                <p class="check">Check out our awesome violin collection</p>
                 <button class="button">Explore</button>
               </div>
             </div>
@@ -138,12 +141,13 @@
                   class="carousel-img" class="carousel-img">
                 <span class="sr-only">Photo by chris bulilan</span>
               </div>
-              <div class="carousel-texts d-flex">
+              <div class="carousel-texts d-flex p-4">
                 <h2 class="red">DRUMS.</h2>
-                <p>“I'm not a singer who plays a bit of drums. I'm a drummer that sings a bit.”
+                <p class="quote">“I'm not a singer who plays a bit of drums. I'm a drummer that sings a bit.”
+                  <span>-- Phil Collins</span>
                 </p>
-                <p>By <span>Phil Collins</span></p>
-                <p>Check out our awesome drums collection</p>
+
+                <p class="check"> Check out our awesome drums collection</p>
                 <button class="button">Explore</button>
               </div>
             </div>
@@ -258,15 +262,18 @@
   </main>
   <footer class="container-fluid">
     <div class="row row-cols-1 row-cols-lg-4">
+      <!-- about the company -->
       <div>
         <img src="./assets/logo.svg" alt="">
         <p class=d-inline>ZATTIX</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia asperiores nobis voluptatum blanditiis ipsa
-          ut
-          dolores soluta voluptates voluptate. Perferendis temporibus perspiciatis iste itaque consequuntur, fugiat
-          sed
-          vero nostrum at!</p>
+        <!-- <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia asperiores nobis voluptatum blanditiis ipsa -->
+        ut
+        dolores soluta voluptates voluptate. Perferendis temporibus perspiciatis iste itaque consequuntur, fugiat
+        sed
+        vero nostrum at!</p>
       </div>
+
+      <!-- categories -->
       <div>
         <h5>Categoris</h5>
         <div class="d-flex">
@@ -292,6 +299,7 @@
           </div>
         </div>
       </div>
+      <!-- nav -->
       <div>
         <div>
           <ul>
@@ -306,6 +314,7 @@
           </ul>
         </div>
       </div>
+
       <div>
         <form action="#" class="d-flex">
           <div>
@@ -326,6 +335,7 @@
           </div>
         </form>
       </div>
+
     </div>
     <div class="d-md-flex justify-content-between">
       <div>
