nav:nabvar padding for mobile for dropdown nav

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
           <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown"
               href="#"><i class="fa fa-th grey"></i>&nbsp;<span class="grey">Collections</span>&nbsp;</a>
             <!-- drop down items in collectons -->
-            <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">First Item</a>
-              <a class="dropdown-item" href="#">Second Item</a>
-              <a class="dropdown-item" href="#">Third Item</a>
+            <div class="dropdown-menu bg-secondary">
+              <a class="dropdown-item" href="#">Piano</a>
+              <a class="dropdown-item" href="#">Violin</a>
+              <a class="dropdown-item" href="#">Drums</a>
             </div>
           </li>
           <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-shopping-cart grey pr-1"></i><span
@@ -50,7 +50,7 @@
           AN
           AD</button>
         <!-- navbar end items -->
-        <div class="d-flex flex-row align-items-center d-flex align-items-center px-0 px-md-2">
+        <div class="user d-flex flex-row align-items-center d-flex align-items-center px-0 px-md-2">
           <div class=" mt-4 mt-md-0 flex-nowrap">
             <a href="#">
               <picture class="mx-1"><img src="assets/samrood.jpg" alt="user image photo"></picture>
