--- a/index.html
+++ b/index.html
@@ -71,17 +71,15 @@
   </header>
   <main class="container-fluid p-0">
     <!-- top category info -->
-    <div class="jumbotron mt-5 mb-0 text-center">
+    <div class="jumbotron mt-5 p-3 p-lg-5 mb-0 text-center">
       <h1 class="text-light">ZATTIX</h1>
       <p class="text-light">Buying and Selling could not be simpler than this</p>
-      <div class="row row-cols-1 row-cols-md-2 justify-content-center">
-        <!-- departments code needed here -->
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 justify-content-center p-0 px-md-3 p-lg-0">
         <input type="search" placeholder="What are you searching for ?"
           class="border-light jumbotron-element text-center" />
         <a href="search.html" class="btn btn-dark bg-charcoal text-light jumbotron-element">Search</a>
       </div>
     </div>
-
     <!-- carousel main - three main slides after header-->
     <section class="container-fluid my-2 m-0 p-0">
       <div data-ride="carousel" class="carousel-main carousel slide" id="carousel-1">
