style:about the company section

--- a/index.html
+++ b/index.html
@@ -261,14 +261,16 @@
   <footer class="container-fluid">
     <div class="row row-cols-1 row-cols-lg-4">
       <!-- about the company -->
-      <div>
-        <img src="./assets/logo.svg" alt="">
-        <p class=d-inline>ZATTIX</p>
-        <!-- <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia asperiores nobis voluptatum blanditiis ipsa -->
-        ut
-        dolores soluta voluptates voluptate. Perferendis temporibus perspiciatis iste itaque consequuntur, fugiat
-        sed
-        vero nostrum at!</p>
+      <div class="bg-red text-light p-4">
+        <div class="text-center">
+          <img src="./assets/logo.svg" alt="logo">
+          <p class="d-inline">ZATTIX</p>
+        </div>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia asperiores nobis voluptatum blanditiis ipsa
+          ut
+          dolores soluta voluptates voluptate. Perferendis temporibus perspiciatis iste itaque consequuntur, fugiat
+          sed
+          vero nostrum at!</p>
       </div>
 
       <!-- categories -->
