style:web-gradients for the body and carousel

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 </head>
 
-<body class="bg-dark-blue">
+<body class="bg-body">
   <header class="container-fluid">
     <!-- navbar top -->
     <nav
@@ -65,16 +65,13 @@
         </div>
       </div>
     </nav>
-    <!-- section for md to large screens -->
-    <div>
-    </div>
   </header>
   <main class="container-fluid p-0">
     <!-- top category info -->
     <div class="jumbotron mt-5 p-3 p-lg-5 mb-0 text-center">
       <h1 class="text-light">ZATTIX</h1>
       <p class="text-light">Buying and Selling could not be simpler than this</p>
-      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 justify-content-center p-0 px-md-3 p-lg-0">
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 justify-content-center px-2 px-md-3 p-lg-0">
         <input type="search" placeholder="What are you searching for ?"
           class="border-light jumbotron-element text-center" />
         <a href="search.html" class="btn btn-dark bg-charcoal text-light jumbotron-element">Search</a>
@@ -90,15 +87,17 @@
           <div class="carousel-item active text-center">
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center">
               <div>
-                <img src="./assets/piano/miguel-dominguez-5yDL5rOKrUM-unsplash.jpg" alt="picture of piano category"
-                  class="carousel-img" class="carousel-img">
+                <div class="carousel-img">
+                  <img src="./assets/piano/miguel-dominguez-5yDL5rOKrUM-unsplash.jpg" alt="picture of piano category"
+                    class="carousel-img">
+                </div>
                 <span class="sr-only">Photo by <a
                     href="https://unsplash.com/@migueldominguez?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Miguel
                     Dominguez</a> on <a
                     href="https://unsplash.com/s/photos/piano?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
 
               </div>
-              <div class="carousel-texts d-flex p-4">
+              <div class="carousel-texts px-3">
                 <h2 class="red">PIANO.</h2>
                 <p class="quote">“Life is like a piano. What you get out of it depends on how you play it.”
                   <span>-- Tom Lehrer</span>
@@ -119,7 +118,7 @@
                 <span class="sr-only">Photo by louis hansel</span>
 
               </div>
-              <div class="carousel-texts d-flex p-4">
+              <div class="carousel-texts px-3">
                 <h2 class="red">VIOLIN.</h2>
                 <p class="quote">"When you play a violin piece, you are a storyteller, and you're telling a story"
                   <span>-- Joshua Bell</span>
@@ -139,7 +138,7 @@
                   class="carousel-img" class="carousel-img">
                 <span class="sr-only">Photo by chris bulilan</span>
               </div>
-              <div class="carousel-texts d-flex p-4">
+              <div class="carousel-texts px-3">
                 <h2 class="red">DRUMS.</h2>
                 <p class="quote">“I'm not a singer who plays a bit of drums. I'm a drummer that sings a bit.”
                   <span>-- Phil Collins</span>
@@ -260,12 +259,13 @@
   </main>
   <footer class="container-fluid">
     <div class="row row-cols-1 row-cols-lg-4">
+
       <!-- about the company -->
-      <div class="bg-red text-light p-4">
+      <div class="text-light p-4">
         <div class="text-center">
           <img src="./assets/logo.svg" alt="logo">
-          <p class="d-inline">ZATTIX</p>
-        </div>
+          <p class="d-inline px-4 ">ZATTIX</p>
+        </div class="p-4">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia asperiores nobis voluptatum blanditiis ipsa
           ut
           dolores soluta voluptates voluptate. Perferendis temporibus perspiciatis iste itaque consequuntur, fugiat
