carousel:background gradient, padding for lg screens

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <!-- slides for carousal start -->
 
           <!-- slide 1 -->
-          <div class="carousel-item active text-center">
+          <div class="carousel-item active text-center p-lg-5">
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center">
               <div>
                 <div class="carousel-img">
@@ -110,7 +110,7 @@
           </div>
 
           <!-- slide 2 -->
-          <div class="carousel-item text-center">
+          <div class="carousel-item text-center p-lg-5">
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center">
               <div>
                 <img src="./assets/piano/miguel-dominguez-5yDL5rOKrUM-unsplash.jpg" alt="picture of piano category"
@@ -131,7 +131,7 @@
           </div>
 
           <!-- slide 3 -->
-          <div class="carousel-item text-center">
+          <div class="carousel-item text-center p-lg-5">
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center">
               <div>
                 <img src="./assets/drums/chris-bulilan-4ktLEcM4PuA-unsplash.jpg" alt="picture of piano category"
